kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-impacta-debit-dpl
  name: ms-impacta-debit
  namespace: microservices-impacta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-impacta-debit
  template:
    metadata:
      labels:
        app: ms-impacta-debit
    spec:
      containers:
      - image: pauloedums/microservices-impacta-debit:latest
        name: ms-impacta-debit-ct
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-impacta-credit-dpl
  name: ms-impacta-credit
  namespace: microservices-impacta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-impacta-credit
  template:
    metadata:
      labels:
        app: ms-impacta-credit
    spec:
      containers:
      - image: pauloedums/microservices-impacta-credit:latest
        name: ms-impacta-credit-ct
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-impacta-extract-balance-dpl
  name: ms-impacta-extract-balance
  namespace: microservices-impacta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-impacta-extract-balance
  template:
    metadata:
      labels:
        app: ms-impacta-extract-balance
    spec:
      containers:
      - image: pauloedums/microservices-impacta-extract-balance:latest
        name: ms-impacta-extract-balance-ct
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-impacta-credit-card-dpl
  name: ms-impacta-credit-card
  namespace: microservices-impacta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-impacta-credit-card
  template:
    metadata:
      labels:
        app: ms-impacta-credit-card
    spec:
      containers:
      - image: pauloedums/microservices-impacta-credit-card:latest
        name: ms-impacta-credit-card-ct
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-impacta-investments-dpl
  name: ms-impacta-investments
  namespace: microservices-impacta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-impacta-investments
  template:
    metadata:
      labels:
        app: ms-impacta-investments
    spec:
      containers:
      - image: pauloedums/microservices-impacta-investments:latest
        name: ms-impacta-investments-ct
        ports:
        - containerPort: 8080
