kubernetes/postgres-statefulset.yaml
# PostgreSQL StatefulSet - ConfigMap
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: microservices-impacta
spec:
  serviceName: postgres-db-lb
  selector:
    matchLabels:
      app: postgres-db
  replicas: 6
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgresql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: conf
            mountPath: /var/lib/postgresql/conf
            readOnly: false
          - name: data
            mountPath: /var/lib/postgresql/data
            readOnly: false

          # Config from ConfigMap
      volumes:
      - name: conf
        configMap:
          name: postgres-db
          defaultMode: 0755
  # Volume Claim
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 50Mi
---
# PostgreSQL StatefulSet Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-db-lb
  namespace: microservices-impacta
spec:
  externalIPs:
    - "10.0.2.25"
  externalName: postgres-db-test.com
  type: NodePort
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30100
