kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-debit-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-debit
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 10030

---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-credit-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-credit
  ports:
  - protocol: TCP
    port: 8091
    targetPort: 10020
---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-extract-balance-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-extract-balance
  ports:
  - protocol: TCP
    port: 8092
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-credit-card-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-credit-card
  ports:
  - protocol: TCP
    port: 8093
    targetPort: 9010
---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-investments-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-investments
  ports:
  - protocol: TCP
    port: 8094
    targetPort: 9020
---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-account-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-account
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ms-impacta-keycloak-svc
  namespace: microservices-impacta
spec:
  selector:
    app: ms-impacta-keycloak
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
